crates/elif-http-derive/tests/ui/fail/module_invalid_section.stderr
error: Unknown module section 'invalid_section'. Valid sections are: providers, controllers, imports, exports
  --> tests/ui/fail/module_invalid_section.rs:10:5
   |
10 |     invalid_section: [UserService],
   |     ^^^^^^^^^^^^^^^
